tests/test50.output
/home/vladyslav/CLionProjects/mcc/tests/test50.c:10:3[0;31m error [0m
Could not cast right expression ('char' and 'int'), near 'c', line 10

/home/vladyslav/CLionProjects/mcc/tests/test50.c:11:3[0;31m error [0m
Could not cast right expression ('int' and 'long'), near 'z', line 11

Encountered 2 semantic errors. Stopping compilation.
